<resources>
    <string name="app_name">MyTasks</string>
    <string name="title_activity_login">Sign in</string>





    <!-- The Main Screen Strings -->


    <string name="action_addNewTasksList"> this fab button to add a new task list </string>
    <string name="MainScreen_TaskListIntent">TaskList</string>
    <string name="MainScreen_ToDoLists">ToDoLists</string>


    <string name="Users_Node">Users</string>
    <string name="List_Node">Lists</string>
    <string name="Friends_Node">Friends</string>
    <string name="TasksList_Node">TasksList</string>
    <string name="Status_Node">Status</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>




    <string name="MainScreenLayout_NoLists">You Are Currently Do not have any Lists, You can create one, from the button in the end of this screen</string>




    <!-- The Shared Tasks Wth Me Strings -->
    <string name="SharedTasks_ScreenTitle">Shared Lists With Me</string>


    <!-- Add New List Screen -->
    <string name="AddNewList_ScreenTitle">My Lists</string>

    <string name="ContentDesribtion_AddList">Add a New List</string>

    <string name="ShowCompleted_addtask">Show Completed Tasks</string>
    <string name="HideCompleted_addtask">Hide Completed Tasks</string>


    <string name="PickFreinds_Title">Share With Friends</string>

    <string name="PickFreinds_Msg1">The Owner of The List Cannot be removed from the Shared List</string>

    <string name="AddNewList__Msg1">You Must Add A List Name First</string>
    <string name="AddNewYask__Msg1">You Must Add A Task Name First</string>



    <string name="TaskStatusContent">TaskStatus</string>

    <string name="ProfileImageContent">ProfileImage</string>
<string name="TaskListImage">TaskListImage</string>

    <string name="Search">Search</string>
    <string name="AddWidget">Add To Widget</string>
    <string name="LogOut">Log Out</string>
    <string name="MyFriends">My Friends</string>


    <string name="SharedLists">Shared Lists with Me</string>
    <string name="MyAccount">My Account</string>
    <string name="ListName">List Name</string>
    <string name="ListFriends">List Of Friends</string>

    <string name="FullName">FullName</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="VerifyPassword">Verify Password</string>
    <string name="Create">Create</string>

    <string name="SharedWith">Shared With :</string>
    <string name="ListIsNoShared">This List is currently not shared with any one</string>

    <string name="AddFreind">Add a new Freind To Share This List With</string>
    <string name="NoFreinds">You Are Currently Dont have any New Friend To Share This List With, To add Freinds, From the Drawer Click on My Freinds</string>

    <string name="NotOwner">You Are Not The Owner Of This List, So you can`t Modify the List of people it shared With</string>

<string name="EmailHint">Email Address</string>
    <string name="SignIn">Sign In</string>
    <string name="CickToRegister">Click Here to Register</string>

    <string name="SearchByEmail">Search By Email</string>

    <string name="AddFreindBtn">Add Friend</string>

    <string name="MyFrindList">My Friends List: </string>
    <string name="NoFriends">You are Currently Dont Have any Freinds</string>

    <string name="NoShared">You Are Currently Do not have any shared Lists With You</string>

<string name="AddNewTask">Add a New Task</string>

<string name="NoOwner">You Are Not The Owner Of This List, So you can`t Modify the List of people it shared With</string>
</resources>
