<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.mytasks.PickMembers"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/PickFreinds_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"

            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SharedWith"

        android:layout_margin="10dp"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ListIsNoShared"
        android:layout_margin="10dp"
        android:id="@+id/TextView_NoSharedFreindsExists"
        android:textColor="#B71C1C"
        android:visibility="gone"
        />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/PicFreinds_Recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
    </android.support.v7.widget.RecyclerView>



<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/AddFreind"
    android:layout_marginLeft="10dp"
    android:layout_marginStart="10dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoFreinds"

        android:layout_margin="10dp"
         android:textColor="#B71C1C"
        android:id="@+id/TextView_AllFreindsExists"
        android:visibility="gone"
        />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#B71C1C"
    android:text="@string/NoOwner"
    android:layout_margin="10dp"
    android:id="@+id/PickMemebers_NoOwnerText"
    android:visibility="gone"

    />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/PicFreinds_RecyclerAddNewShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>
