<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nas2">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgtrans">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">




            <EditText
                android:id="@+id/SignIn_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EmailHint"
                android:textSize="16dp"
                android:textColorHint="#ADCCE2"
                android:textColor="#ADCCE2"
                android:layout_marginLeft="22dp"
                android:inputType="text"
                android:background="#0000"
                android:padding="16dp"
                android:drawableRight="@drawable/user"
                android:layout_marginRight="35dp"
                android:layout_marginStart="22dp"
                android:drawableEnd="@drawable/user"
                android:layout_marginEnd="35dp" />


            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:background="#ADCCE2" />

            <EditText
                android:id="@+id/Sign_In_password"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:textColorHint="#ADCCE2"
                android:layout_marginLeft="22dp"
                android:inputType="textPassword"
                android:textColor="#ADCCE2"
                android:background="#0000"
                android:padding="16dp"
                android:drawableRight="@drawable/pasword"
                android:layout_marginRight="35dp"
                android:layout_marginStart="22dp"
                android:drawableEnd="@drawable/pasword"
                android:layout_marginEnd="35dp" />
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#ADCCE2"/>


            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/prograss_SignIn"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/Login_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect"
                android:text="@string/SignIn"
                android:textSize="16dp"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:padding="16dp"

                android:layout_marginTop="32dp"
                />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/CickToRegister"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="28dp"
    android:textSize="16dp"
    android:textColor="#c4c5c9"
    android:gravity="center"
    android:padding="20dp"
    android:id="@+id/Login_Rigister"
    />


        </LinearLayout>


    </RelativeLayout>
</FrameLayout>
