<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nas2">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgtrans">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <EditText
                android:textSize="16dp"
                android:id="@+id/SignUp_Name_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/FullName"

                android:textColorHint="#ADCCE2"
                android:textColor="#ADCCE2"
                android:layout_marginLeft="22dp"
                android:inputType="text"
                android:background="#0000"
                android:padding="16dp"
                android:layout_marginRight="35dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="35dp" />


            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:background="#ADCCE2" />


            <EditText
                android:textSize="16dp"
                android:id="@+id/SignUp_Email_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"

                android:textColorHint="#ADCCE2"
                android:textColor="#ADCCE2"
                android:layout_marginLeft="22dp"
                android:inputType="text"
                android:background="#0000"
                android:padding="16dp"
                android:layout_marginRight="35dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="35dp" />


            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:background="#ADCCE2" />







            <EditText
                android:textSize="16dp"
                android:id="@+id/SignUp_Password_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:textColorHint="#ADCCE2"
                android:layout_marginLeft="22dp"
                android:inputType="textPassword"
                android:maxLength="12"
                android:textColor="#ADCCE2"
                android:background="#0000"
                android:padding="16dp"

                android:layout_marginRight="35dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="35dp" />
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#ADCCE2"/>


            <EditText
                android:textSize="16dp"
                android:id="@+id/SignUp_VerifyPassword_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/VerifyPassword"

                android:textColorHint="#ADCCE2"
                android:textColor="#ADCCE2"
                android:layout_marginLeft="22dp"
                android:inputType="textPassword"
                android:background="#0000"
                android:padding="16dp"

                android:layout_marginRight="35dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="35dp" />


            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:background="#ADCCE2" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/prograss_SignUp"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/SignUp_SignUp_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect"
                android:text="@string/Create"

                android:textSize="16dp"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:padding="16dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="28dp"
                android:layout_marginTop="32dp"
                />






        </LinearLayout>


    </RelativeLayout>
</FrameLayout>
